--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <tbody></tbody>
 </table>
 
-<footer>© Pierre Charlier 2025 — Version 1.3</footer>
+<footer>© Pierre Charlier 2025 — Version 1.4</footer>
 
 <script>
 const fields = [
@@ -205,15 +205,26 @@ window.onload = () => {
   const saved = localStorage.getItem("dogData");
   if (saved) {
     const data = JSON.parse(saved);
+
+    // Restore simple fields
     fields.forEach(f => {
       if (data[f.id]) document.getElementById(f.id).value = data[f.id];
     });
-    // Restore photo
+
+    // Restore photo from base64
     photoData = data.photo || "";
-    if (photoData) document.getElementById("photoPreview").src = photoData;
+    if (photoData && photoData.startsWith("data:image")) {
+      document.getElementById("photoPreview").src = photoData;
+    } else {
+      photoData = "";
+      document.getElementById("photoPreview").src = "";
+    }
+
+    // Restore dynamic lists
     vaccinations = data.vaccinations || [];
     deparasitage = data.deparasitage || [];
     maladies = data.maladies || [];
+
     renderEntries();
     updateTable();
   }
@@ -224,54 +235,42 @@ fields.forEach(f => {
   document.getElementById(f.id).addEventListener("input", autoSave);
 });
 
-// Photo handling
+// Photo handling (save independent of file input)
 document.getElementById('photoInput').addEventListener('change', function () {
   const file = this.files[0];
-  if (file) {
-    const reader = new FileReader();
-    reader.onload = function (e) {
-      photoData = e.target.result;
-      document.getElementById('photoPreview').src = photoData;
-      autoSave();
-    };
-    reader.readAsDataURL(file);
-  }
+  if (!file) return;
+
+  const reader = new FileReader();
+  reader.onload = function () {
+    photoData = reader.result;
+    document.getElementById('photoPreview').src = photoData;
+    autoSave();
+  };
+  reader.readAsDataURL(file);
 });
 
-// Dynamic entries logic (vaccinations, etc.)
+// Functions for dynamic entries
 function addVaccination() {
   vaccinations.push({ date: "", produit: "" });
   renderEntries();
   autoSave();
 }
-
 function addDeparasitage() {
   deparasitage.push({ date: "", produit: "" });
   renderEntries();
   autoSave();
 }
-
 function addMaladie() {
   maladies.push({ date: "", nom: "", notes: "" });
   renderEntries();
   autoSave();
 }
 
-function deleteVaccination(i) {
-  vaccinations.splice(i,1);
-  renderEntries(); autoSave();
-}
+function deleteVaccination(i) { vaccinations.splice(i,1); renderEntries(); autoSave(); }
+function deleteDeparasitage(i) { deparasitage.splice(i,1); renderEntries(); autoSave(); }
+function deleteMaladie(i) { maladies.splice(i,1); renderEntries(); autoSave(); }
 
-function deleteDeparasitage(i) {
-  deparasitage.splice(i,1);
-  renderEntries(); autoSave();
-}
-
-function deleteMaladie(i) {
-  maladies.splice(i,1);
-  renderEntries(); autoSave();
-}
-
+// Render dynamic lists
 function renderEntries() {
   const vDiv = document.getElementById("vaccinationList");
   vDiv.innerHTML = "";
@@ -308,6 +307,7 @@ function renderEntries() {
   });
 }
 
+// Auto-save to localStorage
 function autoSave() {
   const data = {};
   fields.forEach(f => data[f.id] = document.getElementById(f.id).value);
@@ -328,7 +328,6 @@ function formatDate(d) {
 function updateTable() {
   const tbody = document.querySelector("#dataTable tbody");
   tbody.innerHTML = "";
-
   function addRow(label, value) {
     const tr = document.createElement("tr");
     tr.innerHTML = `<td>${label}</td><td>${value}</td>`;
@@ -337,7 +336,7 @@ function updateTable() {
 
   fields.forEach(f => {
     const val = document.getElementById(f.id).value;
-    addRow(f.label, f.id==="birthDate"?formatDate(val):val);
+    addRow(f.label, f.id === "birthDate" ? formatDate(val) : val);
   });
 
   vaccinations.forEach((v,i) => addRow(`Vaccination ${i+1}`, `${formatDate(v.date)} — ${v.produit}`));
